; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datetime.c_GetCurrentTimeUsec.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datetime.c_GetCurrentTimeUsec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pg_tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GetCurrentTimeUsec(%struct.pg_tm* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.pg_tm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.pg_tm* %0, %struct.pg_tm** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = call i32 (...) @GetCurrentTransactionStartTimestamp()
  %9 = load %struct.pg_tm*, %struct.pg_tm** %4, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @timestamp2tm(i32 %8, i32* %7, %struct.pg_tm* %9, i32* %10, i32* null, i32* null)
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %6, align 8
  store i32 %15, i32* %16, align 4
  br label %17

17:                                               ; preds = %14, %3
  ret void
}

declare dso_local i32 @timestamp2tm(i32, i32*, %struct.pg_tm*, i32*, i32*, i32*) #1

declare dso_local i32 @GetCurrentTransactionStartTimestamp(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
